trying to fix margins on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,7 @@ main {
 @media screen and (width: 375px) and (height: 667px) {
   main {
     margin-top: 180px;
-    margin-left: -50px;
-    margin-right: 20px;
+    margin-left: 10px;
     margin-bottom: 331px;
     padding: 30px;
   }
